--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('com.h2database:h2')
+	compile 'org.webjars:font-awesome:5.0.6'
 	compile 'org.webjars:angularjs:1.6.9'
 	compile 'org.webjars.npm:angular2:2.0.0-beta.21'
 	compile 'org.webjars:jspdf:1.3.5'
