--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8040
 #server.address = 127.0.0.1
 
 config.serverLocation: \
-C:/opt/am_j2c_2
+/home/roman/algoritmed/code/am_j2c_2
 #/home/roman/algoritmed/code/am_j2c_2
 #C:/opt/am_j2c_2
 #C:\opt\am_j2c_2
