db_design with ERROR

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,3 +1,6 @@
+sql.nextDbId: \
+SELECT nextval('dbid')
+
 sql.program_folder.select: \
 SELECT * FROM doc dFolder, string dirName WHERE doc_id=string_id AND doctype=10
 
@@ -12,6 +15,15 @@ UPDATE integer SET value=:value WHERE integer_id=:data_id
 
 sql.string.update: \
 UPDATE string SET value=:value WHERE string_id=:data_id
+
+sql.folders.select: \
+SELECT doc_id folder_id,parent,value folder_name folder FROM ( \
+SELECT * FROM doc d1, string s1 where  d1.doctype=14 and s1.string_id=d1.doc_id \
+) x
+
+sql.folders.insert: \
+INSERT INTO doc (doctype, doc_id, reference) VALUES (14, :nextDbId1, :reference); \
+INSERT INTO string (value, string_id) VALUES (:value, :nextDbId1);
 
 sql.tables.select: \
 SELECT doc_id row_id, value col_tablename, string_id col_tablename_id \
