--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -17,7 +17,7 @@ sql.string.update: \
 UPDATE string SET value=:value WHERE string_id=:data_id
 
 sql.folders.select: \
-SELECT doc_id folder_id,parent,value folder_name folder FROM ( \
+SELECT parent,doc_id folder_id,value folder_name FROM ( \
 SELECT * FROM doc d1, string s1 where  d1.doctype=14 and s1.string_id=d1.doc_id \
 ) x
 
@@ -26,8 +26,11 @@ INSERT INTO doc (doctype, doc_id, reference) VALUES (14, :nextDbId1, :reference)
 INSERT INTO string (value, string_id) VALUES (:value, :nextDbId1);
 
 sql.tables.select: \
-SELECT doc_id row_id, value col_tablename, string_id col_tablename_id \
-FROM doc d, string s WHERE d.doc_id=s.string_id AND doctype=1
+SELECT parent, doc_id row_id, value col_tablename, string_id col_tablename_id FROM ( \
+SELECT * FROM doc d1, string s1 where  d1.doctype=1 and s1.string_id=d1.doc_id \
+) x
+#SELECT doc_id row_id, value col_tablename, string_id col_tablename_id \
+#FROM doc d, string s WHERE d.doc_id=s.string_id AND doctype=1
 
 #SELECT * FROM doc d, string s WHERE d.doc_id=s.string_id AND doctype=1
 
@@ -66,4 +69,3 @@ AND s1.string_id=d1.doc_id \
 AND s2.string_id=d2.doc_id \
 AND d2.reference=r2.doc_id \
 AND rs2.string_id=r2.doc_id
-
