--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -22,7 +22,10 @@ SELECT * FROM doc d1, string s1 where  d1.doctype=14 and s1.string_id=d1.doc_id 
 ) x
 
 sql.folders.insert: \
-INSERT INTO doc (doctype, doc_id, reference) VALUES (14, :nextDbId1, :reference); \
+${sql.docString.insert}
+
+sql.docString.insert: \
+INSERT INTO doc (doctype, doc_id, parent) VALUES (:doctype, :nextDbId1, :parent); \
 INSERT INTO string (value, string_id) VALUES (:value, :nextDbId1);
 
 sql.tables.select: \
@@ -33,6 +36,9 @@ SELECT * FROM doc d1, string s1 where  d1.doctype=1 and s1.string_id=d1.doc_id \
 #FROM doc d, string s WHERE d.doc_id=s.string_id AND doctype=1
 
 #SELECT * FROM doc d, string s WHERE d.doc_id=s.string_id AND doctype=1
+
+sql.table.insert: \
+${sql.docString.insert}
 
 sql.table.select: \
 ${sql.join_columns.select}; \
