--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,6 +1,3 @@
-sql.nextDbId: \
-SELECT nextval('dbid')
-
 sql.program_folder.select: \
 SELECT * FROM doc dFolder, string dirName WHERE doc_id=string_id AND doctype=10
 
@@ -75,3 +72,6 @@ AND s1.string_id=d1.doc_id \
 AND s2.string_id=d2.doc_id \
 AND d2.reference=r2.doc_id \
 AND rs2.string_id=r2.doc_id
+
+sql.nextDbId: \
+SELECT nextval('dbid');
