--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -25,6 +25,9 @@ sql.docString.insert: \
 INSERT INTO doc (doctype, doc_id, parent) VALUES (:doctype, :nextDbId1, :parent); \
 INSERT INTO string (value, string_id) VALUES (:value, :nextDbId1);
 
+sql.tables.folder.select: \
+SELECT * FROM ( ${sql.tables.select} ) x WHERE parent=:folder_id
+
 sql.tables.select: \
 SELECT parent, doc_id row_id, value col_tablename, string_id col_tablename_id FROM ( \
 SELECT * FROM doc d1, string s1 where  d1.doctype=1 and s1.string_id=d1.doc_id \
