algorithmedJS create table complete

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -37,6 +37,12 @@ SELECT * FROM doc d1, string s1 where  d1.doctype=1 and s1.string_id=d1.doc_id \
 
 #SELECT * FROM doc d, string s WHERE d.doc_id=s.string_id AND doctype=1
 
+sql.columns.insert: \
+${sql.docString.insert}; \
+UPDATE doc SET (reference)=( \
+SELECT doc_id FROM string, doc WHERE doc_id=string_id AND value=:fieldtype \
+) WHERE doc_id=:nextDbId1
+
 sql.table.insert: \
 ${sql.docString.insert}
 
