--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -73,6 +73,9 @@ SELECT cln.doc_id cln_id, 'col_'||cln.doc_id col_key \
  AND clntype.doc_id=cln.reference AND typevalue.string_id=clntype.doc_id  \
  ) x, string WHERE cln_id=string_id) x
 
+sql.create_table.select: \
+SELECT * FROM (${sql.create_tables.select}) x WHERE table_id=:table_id
+
 sql.create_tables.select: \
 SELECT d1.doc_id table_id, d2.doc_id column_id, s1.value tablename ,s2.value fieldname ,rs2.value fieldtype \
 FROM doc d1, doc d2, doc r2, string rs2, string s1, string s2 \
