--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -46,31 +46,38 @@ SELECT doc_id FROM string, doc WHERE doc_id=string_id AND value=:fieldtype \
 sql.table.insert: \
 ${sql.docString.insert}
 
+sql.table_row.insert: \
+INSERT INTO doc (doctype, doc_id, parent) VALUES (4, :nextDbId1, :table_id)
+
+sql.table_cell.insert: \
+INSERT INTO doc (doctype, doc_id, parent, reference) VALUES (5, :nextDbId1, :row_id, :column_id); \
+INSERT INTO :valueTableName (value, :valueTableName_id) VALUES (:value, :nextDbId1);
+
 sql.table.select: \
 ${sql.join_columns.select}; \
 ${sql.table1.select};
 
 sql.table1.select: \
-SELECT rws.doc_id row_id, rws.parent tbl_id \
-:add_columns \
+SELECT rws.parent tbl_id, rws.doc_id row_id\n\
+:add_columns\n\
 FROM doc tbl, doc rws \
-:add_joins \
-WHERE tbl.doc_id=5 AND tbl.doc_id=rws.parent AND rws.doctype=4
+:add_joins\n\
+WHERE tbl.doc_id=:table_id AND tbl.doc_id=rws.parent AND rws.doctype=4\n\
 
 sql.join_columns.select: \
-SELECT 'LEFT JOIN ('||x.joins_select||') '||col_key||' ON '||col_key||'_row=rws.doc_id ' add_joins \
-, ', '||col_key||', '||col_key||'_id' add_columns  \
-, x.* FROM ( \
-SELECT 'SELECT value '||col_key||', doc_id '||col_key||'_id, parent '||col_key||'_row ' \
+SELECT '\nLEFT JOIN ('||x.joins_select||') '||col_key||' ON column_'||cln_id||'_id='||cln_id||' AND '||col_key||'_row=rws.doc_id ' add_joins\n \
+, ', '||col_key||'_id, '||col_key add_columns\n\
+, x.* FROM (\n\
+SELECT 'SELECT doc_id '||col_key||'_id, value '||col_key||', parent '||col_key||'_row, reference column_'||cln_id||'_id '\n\
 ||' FROM doc cd, '||col_table_name||' cv ' \
-||' WHERE cd.doc_id=cv.'||col_table_name||'_id AND doctype=5' joins_select \
-, value col_alias  \
-, x.* FROM (  \
-SELECT cln.doc_id cln_id, 'col_'||cln.doc_id col_key \
-, CASEWHEN(clntype.doc_id=2, 'string' , typevalue.value) col_table_name \
- FROM doc tbl, doc cln , doc clntype, string typevalue \
- WHERE tbl.doc_id=5 AND tbl.doc_id=cln.parent AND cln.doctype=8 \
- AND clntype.doc_id=cln.reference AND typevalue.string_id=clntype.doc_id  \
+||'\n WHERE cd.doc_id=cv.'||col_table_name||'_id AND doctype=5' joins_select\n\
+, value col_alias\n\
+, x.* FROM (\n\
+SELECT tbl.doc_id table_id, cln.doc_id cln_id, 'col_'||cln.doc_id col_key\n\
+, CASEWHEN(clntype.doc_id=2, 'string' , typevalue.value) col_table_name\n \
+ FROM doc tbl, doc cln , doc clntype, string typevalue\n \
+ WHERE tbl.doc_id=:table_id AND tbl.doc_id=cln.parent AND cln.doctype=8\n \
+ AND clntype.doc_id=cln.reference AND typevalue.string_id=clntype.doc_id\n  \
  ) x, string WHERE cln_id=string_id) x
 
 sql.create_table.select: \
