--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 	compile 'org.webjars:font-awesome:4.7.0'
 	compile 'org.webjars:angularjs:1.6.9'
 	compile 'org.webjars.npm:angular2:2.0.0-beta.21'
+	compile 'org.xerial:sqlite-jdbc'
+	//compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
+	
 	compile 'org.webjars:jspdf:1.3.5'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
