--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,4 +1,9 @@
 
+sql2.folders.select: \
+SELECT parent_id,doc_id folder_id,value folder_name FROM ( \
+SELECT * FROM doc d1, string s1 where  d1.doctype=56 and s1.string_id=d1.doc_id \
+) x
+
 sql.msp.msp_ehealth_response.select: \
 SELECT * FROM doc, docbody \
 WHERE doc_id=docbody_id AND doctype=:MSP_EHEALT_RESPONSE_type AND parent_id=:msp_id;
