icpc2 first commit

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,7 +1,15 @@
 
-sql2.folders.select: \
-SELECT parent_id,doc_id folder_id,value folder_name FROM ( \
-SELECT * FROM doc d1, string s1 where  d1.doctype=56 and s1.string_id=d1.doc_id \
+sql2.icpc2.select: \
+SELECT c1.code||c2.code code, s2.value ,d2.doc_id, d2.parent_id \
+FROM string s2, doc d1, doc d2, code c2, code c1 \
+where d1.doc_id=d2.parent_id and d1.doctype=57 \
+and s2.string_id=d2.doc_id \
+and c2.code_id=d2.doc_id \
+and c1.code_id=d1.doc_id
+
+sql2.stringDocType.select: \
+SELECT parent_id,doc_id,value name FROM ( \
+SELECT * FROM doc d1, string s1 where  d1.doctype=:doctype and s1.string_id=d1.doc_id \
 ) x
 
 sql.msp.msp_ehealth_response.select: \
