icd10 second commit with seek

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,5 +1,14 @@
+sql2.icd10.seek: \
+SELECT * FROM (${sql2.icd10.select1}) x \
+WHERE LOWER(icd_name) like LOWER(:seek) \
+OR LOWER(icd_code) like LOWER(:seek) \
+LIMIT 10
+
 sql2.icd10.select: \
-SELECT d.doc_id, i.* FROM icd i, doc d, icd10uatree t where i.icd_id=icd10uatree_id and t.doc_id=d.doc_id and  doctype=89 limit 20
+${sql2.icd10.select1} limit 20
+
+sql2.icd10.select1: \
+SELECT d.doc_id, i.* FROM icd i, doc d, icd10uatree t where i.icd_id=icd10uatree_id and t.doc_id=d.doc_id and  doctype=89
 
 sql2.icpc2.select: \
 SELECT c1.code||c2.code code, s2.value ,d2.doc_id, d2.parent_id, s1.value part, d2.doctype \
