--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,23 +1,23 @@
 sql2.icd10.seek: \
 SELECT * FROM (${sql2.icd10.select1}) x \
-WHERE LOWER(icd_name) like LOWER(:seek) \
-OR LOWER(icd_code) like LOWER(:seek) \
+WHERE LOWER(icd_name) LIKE LOWER(:seek) \
+OR LOWER(icd_code) LIKE LOWER(:seek) \
 LIMIT 10
 
 sql2.icd10.select: \
-${sql2.icd10.select1} limit 20
+${sql2.icd10.select1} LIMIT 20
 
 sql2.icd10.select1: \
-SELECT d.doc_id, i.* FROM icd i, doc d, icd10uatree t where i.icd_id=icd10uatree_id and t.doc_id=d.doc_id and  doctype=89
+SELECT d.doc_id, i.* FROM icd i, doc d, icd10uatree t where i.icd_id=icd10uatree_id and t.doc_id=d.doc_id and  doctype=:doctype
 
 sql2.icpc2.select: \
-SELECT c1.code||c2.code code, s2.value ,d2.doc_id, d2.parent_id, s1.value part, d2.doctype \
+SELECT c1.code||c2.code code, s2.value, d2.doc_id, d2.parent_id, s1.value part, d2.doctype \
 FROM string s2, doc d1, doc d2, string s1, code c2, code c1 \
-where d1.doc_id=d2.parent_id and d1.doctype=57 \
-and s2.string_id=d2.doc_id \
-and s1.string_id=d1.doc_id \
-and c2.code_id=d2.doc_id \
-and c1.code_id=d1.doc_id
+WHERE d1.doc_id=d2.parent_id AND d1.doctype=57 \
+AND s2.string_id=d2.doc_id \
+AND s1.string_id=d1.doc_id \
+AND c2.code_id=d2.doc_id \
+AND c1.code_id=d1.doc_id
 
 sql2.stringDocType.select: \
 SELECT parent_id,doc_id,value name FROM ( \
