icd10 work ready

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,3 +1,7 @@
+
+sql2.icd10value.seek: \
+SELECT * FROM doc d, (${sql2.icd10.select1}) x WHERE x.doc_id=d.doc_id AND parent_id=:parent_id
+
 sql2.icd10.seek: \
 SELECT * FROM (${sql2.icd10.select1}) x \
 WHERE LOWER(icd_name) LIKE LOWER(:seek) \
