icpc2 patient data

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,3 +1,29 @@
+sql2.table.select: \
+${sql2.join_columns.select}; \
+${sql2.table1.select};
+
+sql2.table1.select: \
+SELECT rws.parent_id tbl_id, rws.doc_id row_id\n\
+:add_columns\n\
+FROM doc tbl, doc rws \
+:add_joins\n\
+WHERE tbl.doc_id=:table_id AND tbl.doc_id=rws.parent_id AND rws.doctype=9\n\
+
+sql2.join_columns.select: \
+SELECT '\nLEFT JOIN ('||x.joins_select||') '||col_key||' ON column_'||cln_id||'_id='||cln_id||' AND '||col_key||'_row=rws.doc_id ' add_joins\n \
+, ', '||col_key||'_id, '||col_key add_columns\n\
+, x.* FROM (\n\
+SELECT 'SELECT doc_id '||col_key||'_id, value '||col_key||', parent_id '||col_key||'_row, reference column_'||cln_id||'_id '\n\
+||' FROM doc cd, '||col_table_name||' cv ' \
+||'\n WHERE cd.doc_id=cv.'||col_table_name||'_id AND doctype=10' joins_select\n\
+, value col_alias\n\
+, x.* FROM (\n\
+SELECT tbl.doc_id table_id, cln.doc_id cln_id, 'col_'||cln.doc_id col_key\n\
+, CASEWHEN(clntype.doc_id=9768, 'string' , typevalue.value) col_table_name\n \
+ FROM doc tbl, doc cln , doc clntype, string typevalue\n \
+ WHERE tbl.doc_id=:table_id AND tbl.doc_id=cln.parent_id AND cln.doctype=8\n \
+ AND clntype.doc_id=cln.reference AND typevalue.string_id=clntype.doc_id\n  \
+ ) x, string WHERE cln_id=string_id) x
 
 sql2.icd10value.seek: \
 SELECT * FROM doc d, (${sql2.icd10.select1}) x WHERE x.doc_id=d.doc_id AND parent_id=:parent_id
@@ -22,6 +48,13 @@ AND s2.string_id=d2.doc_id \
 AND s1.string_id=d1.doc_id \
 AND c2.code_id=d2.doc_id \
 AND c1.code_id=d1.doc_id
+
+sql2.ddtable.select: \
+${sql2.stringDocType.select} UNION \
+SELECT parent_id,doc_id,value name FROM ( \
+SELECT * FROM doc d1, string s1 where  d1.doctype=7 and s1.string_id=d1.doc_id \
+) x
+
 
 sql2.stringDocType.select: \
 SELECT parent_id,doc_id,value name FROM ( \
