icpc2-nakaz74 edit first commit

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -18,10 +18,10 @@ SELECT 'SELECT doc_id '||col_key||'_id, value '||col_key||', parent_id '||col_ke
 ||'\n WHERE cd.doc_id=cv.'||col_table_name||'_id AND doctype=10' joins_select\n\
 , value col_alias\n\
 , x.* FROM (\n\
-SELECT tbl.doc_id table_id, cln.doc_id cln_id, 'col_'||cln.doc_id col_key\n\
+SELECT cln.parent_id table_id, cln.doc_id cln_id, 'col_'||cln.doc_id col_key\n\
 , CASEWHEN(clntype.doc_id=9768, 'string' , typevalue.value) col_table_name\n \
- FROM doc tbl, doc cln , doc clntype, string typevalue\n \
- WHERE tbl.doc_id=:table_id AND tbl.doc_id=cln.parent_id AND cln.doctype=8\n \
+ FROM doc cln , doc clntype, string typevalue\n \
+ WHERE cln.parent_id=:table_id AND cln.doctype=8\n \
  AND clntype.doc_id=cln.reference AND typevalue.string_id=clntype.doc_id\n  \
  ) x, string WHERE cln_id=string_id) x
 
