j2c table update first commit

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,3 +1,9 @@
+sql2.integer.updateById: \
+UPDATE integer SET value=:value WHERE integer_id=:data_id
+
+sql2.string.updateById: \
+UPDATE string SET value=:value WHERE string_id=:data_id
+
 sql2.table.select: \
 ${sql2.join_columns.select}; \
 ${sql2.table1.select};
