j2c insert and update string

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,3 +1,13 @@
+sql2.string.insertRowId: \
+INSERT INTO doc (doctype, doc_id, parent_id, reference) \
+VALUES (10, :nextDbId1, :row_id, :cln_id); \
+INSERT INTO string (string_id, value) VALUES (:nextDbId1, :value)
+
+sql2.integer.insertRowId: \
+INSERT INTO doc (doctype, doc_id, parent_id, reference) \
+VALUES (10, :nextDbId1, :row_id, :cln_id); \
+INSERT INTO integer (integer_id, value) VALUES (:nextDbId1, :value)
+
 sql2.integer.updateById: \
 UPDATE integer SET value=:value WHERE integer_id=:data_id
 
