--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,3 +1,16 @@
+sql2.j2c.insertRow: \
+INSERT INTO doc (doctype, doc_id, parent_id) \
+VALUES (9, :nextDbId1, :tbl_id); \
+
+sql2.j2c.deleteRowId: \
+SET LOCK_MODE 1; \
+delete from string where string_id in (SELECT doc_id FROM doc where parent_id=:row_id); \
+delete from integer where integer_id in (SELECT doc_id FROM doc where parent_id=:row_id); \
+DELETE FROM doc WHERE parent_id=:row_id; \
+DELETE FROM doc WHERE doc_id=:row_id; \
+COMMIT
+
+
 sql2.string.insertRowId: \
 INSERT INTO doc (doctype, doc_id, parent_id, reference) \
 VALUES (10, :nextDbId1, :row_id, :cln_id); \
