icpc2 first demo

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -3,12 +3,13 @@ INSERT INTO doc (doctype, doc_id, parent_id) \
 VALUES (9, :nextDbId1, :tbl_id); \
 
 sql2.j2c.deleteRowId: \
-SET LOCK_MODE 1; \
 delete from string where string_id in (SELECT doc_id FROM doc where parent_id=:row_id); \
 delete from integer where integer_id in (SELECT doc_id FROM doc where parent_id=:row_id); \
 DELETE FROM doc WHERE parent_id=:row_id; \
 DELETE FROM doc WHERE doc_id=:row_id; \
-COMMIT
+
+#COMMIT
+#SET LOCK_MODE 1; \
 
 sql2.string.insertRowId: \
 INSERT INTO doc (doctype, doc_id, parent_id, reference) \
@@ -64,9 +65,21 @@ sql2.icd10.select: \
 ${sql2.icd10.select1} LIMIT 20
 
 sql2.icd10.select1: \
-SELECT d.doc_id, i.* FROM icd i, doc d, icd10uatree t where i.icd_id=icd10uatree_id and t.doc_id=d.doc_id and  doctype=:doctype
+SELECT d.doc_id, i.* FROM icd i, doc d, icd10uatree t \
+where i.icd_id=icd10uatree_id and t.doc_id=d.doc_id and  doctype=:doctype
 
 sql2.icpc2.select: \
+SELECT * FROM ( \
+${sql2.icpc2.select1} \
+) x LIMIT 10
+
+sql2.icpc2.seek: \
+SELECT * FROM (${sql2.icpc2.select1}) x \
+WHERE LOWER(value) LIKE LOWER(:seek) \
+OR LOWER(code) LIKE LOWER(:seek) \
+LIMIT 20
+
+sql2.icpc2.select1: \
 SELECT c1.code||c2.code code, s2.value, d2.doc_id, d2.parent_id, s1.value part, d2.doctype \
 FROM string s2, doc d1, doc d2, string s1, code c2, code c1 \
 WHERE d1.doc_id=d2.parent_id AND d1.doctype=57 \
