--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -40,14 +40,14 @@ sql2.join_columns.select: \
 SELECT '\nLEFT JOIN ('||x.joins_select||') '||col_key||' ON column_'||cln_id||'_id='||cln_id||' AND '||col_key||'_row=rws.doc_id ' add_joins\n \
 , ', '||col_key||'_id, '||col_key add_columns\n\
 , x.* FROM (\n\
-SELECT 'SELECT doc_id '||col_key||'_id, value '||col_key||', parent_id '||col_key||'_row, reference column_'||cln_id||'_id '\n\
+SELECT CASEWHEN(docbody is not null, docbody, 'SELECT doc_id '||col_key||'_id, value '||col_key||', parent_id '||col_key||'_row, reference column_'||cln_id||'_id '\n\
 ||' FROM doc cd, '||col_table_name||' cv ' \
-||'\n WHERE cd.doc_id=cv.'||col_table_name||'_id AND doctype=10' joins_select\n\
+||'\n WHERE cd.doc_id=cv.'||col_table_name||'_id AND doctype=10') joins_select\n\
 , value col_alias\n\
 , x.* FROM (\n\
-SELECT cln.parent_id table_id, cln.doc_id cln_id, 'col_'||cln.doc_id col_key\n\
-, CASEWHEN(clntype.doc_id=9768, 'string' , typevalue.value) col_table_name\n \
- FROM doc cln , doc clntype, string typevalue\n \
+SELECT cln.doc_id cln_id, 'col_'||cln.doc_id col_key\n\
+, CASEWHEN(clntype.doc_id=9768, 'string' , typevalue.value) col_table_name, clnbody.docbody\n \
+ FROM doc cln left join docbody clnbody on docbody_id=cln.doc_id, doc clntype, string typevalue\n \
  WHERE cln.parent_id=:table_id AND cln.doctype=8\n \
  AND clntype.doc_id=cln.reference AND typevalue.string_id=clntype.doc_id\n  \
  ) x, string WHERE cln_id=string_id) x
