j2c icpc2-nakaz74 patient update

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,3 +1,6 @@
+sql2.j2c.updateConstraint: \
+UPDATE doc SET reference2=:reference2 WHERE doc_id=:doc_id
+
 sql2.j2c.insertRow: \
 INSERT INTO doc (doctype, doc_id, parent_id) \
 VALUES (9, :nextDbId1, :tbl_id); \
