j2c icpc2-nakaz74 patient insert

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,5 +1,9 @@
-sql2.j2c.updateConstraint: \
+sql2.j2c.updateCellWithConstraint: \
 UPDATE doc SET reference2=:reference2 WHERE doc_id=:doc_id
+
+sql2.j2c.insertCellWithConstraint: \
+INSERT INTO doc (doctype, doc_id, parent_id, reference, reference2) \
+VALUES (10, :nextDbId1, :parent_id, :reference, :reference2); \
 
 sql2.j2c.insertRow: \
 INSERT INTO doc (doctype, doc_id, parent_id) \
