--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -36,6 +36,10 @@ sql2.table.select: \
 ${sql2.join_columns.select}; \
 ${sql2.table1.select};
 
+sql2.table2.select: \
+${sql2.join_columns.select}; \
+SELECT * FROM (${sql2.table1.select}) x, doctimestamp WHERE row_id=doctimestamp_id
+
 sql2.table1.select: \
 SELECT rws.parent_id tbl_id, rws.doc_id row_id\n\
 :add_columns\n\
@@ -79,6 +83,20 @@ sql2.icpc2.select: \
 SELECT * FROM ( \
 ${sql2.icpc2.select1} \
 ) x LIMIT 10
+
+sql2.icpc2.seek_process: \
+SELECT * FROM (${sql2.icpc2.select1}) x \
+WHERE (LOWER(value) LIKE LOWER(:seek) \
+OR LOWER(code) LIKE LOWER(:seek) \
+) AND parent_id=857 \
+LIMIT 20
+
+sql2.icpc2.seek_code: \
+SELECT * FROM (${sql2.icpc2.select1}) x \
+WHERE (LOWER(value) LIKE LOWER(:seek) \
+OR LOWER(code) LIKE LOWER(:seek) \
+) AND parent_id!=857 \
+LIMIT 20
 
 sql2.icpc2.seek: \
 SELECT * FROM (${sql2.icpc2.select1}) x \
