icpc2 nakaz74 add read Physician

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -38,7 +38,9 @@ ${sql2.table1.select};
 
 sql2.table2.select: \
 ${sql2.join_columns.select}; \
-SELECT * FROM (${sql2.table1.select}) x, doctimestamp WHERE row_id=doctimestamp_id
+SELECT * FROM (${sql2.table1.select}) x, doctimestamp \
+, (SELECT doc_id r2r_id,p.* FROM doc,person p WHERE person_id=reference2) p \
+WHERE row_id=doctimestamp_id  and p.r2r_id=row_id
 
 sql2.table1.select: \
 SELECT rws.parent_id tbl_id, rws.doc_id row_id\n\
