--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -5,13 +5,20 @@ sql2.j2c.insertCellWithConstraint: \
 INSERT INTO doc (doctype, doc_id, parent_id, reference, reference2) \
 VALUES (10, :nextDbId1, :parent_id, :reference, :reference2); \
 
+sql2.j2c.insertRow2: \
+INSERT INTO doc (doctype, doc_id, parent_id, reference2) VALUES (9, :nextDbId1, :tbl_id, :reference2); \
+INSERT INTO doctimestamp (doctimestamp_id) VALUES (:nextDbId1); \
+
 sql2.j2c.insertRow: \
 INSERT INTO doc (doctype, doc_id, parent_id) \
 VALUES (9, :nextDbId1, :tbl_id); \
 
+sql2.j2c.deleteRowId2: \
+UPDATE doc SET removed=true WHERE doc_id=:row_id
+
 sql2.j2c.deleteRowId: \
-delete from string where string_id in (SELECT doc_id FROM doc where parent_id=:row_id); \
-delete from integer where integer_id in (SELECT doc_id FROM doc where parent_id=:row_id); \
+DELETE FROM string WHERE string_id IN (SELECT doc_id FROM doc WHERE parent_id=:row_id); \
+DELETE FROM integer WHERE integer_id IN (SELECT doc_id FROM doc WHERE parent_id=:row_id); \
 DELETE FROM doc WHERE parent_id=:row_id; \
 DELETE FROM doc WHERE doc_id=:row_id; \
 
@@ -47,7 +54,7 @@ SELECT rws.parent_id tbl_id, rws.doc_id row_id\n\
 :add_columns\n\
 FROM doc tbl, doc rws \
 :add_joins\n\
-WHERE tbl.doc_id=:table_id AND tbl.doc_id=rws.parent_id AND rws.doctype=9\n\
+WHERE tbl.doc_id=:table_id AND tbl.doc_id=rws.parent_id AND NOT rws.removed AND rws.doctype=9\n\
 
 sql2.join_columns.select: \
 SELECT '\nLEFT JOIN ('||x.joins_select||') '||col_key||' ON column_'||cln_id||'_id='||cln_id||' AND '||col_key||'_row=rws.doc_id ' add_joins\n \
