icpc2 редактор дати запису

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,3 +1,6 @@
+sql2.j2c.updateCreatedDate: \
+UPDATE doctimestamp SET created=:created WHERE doctimestamp_id=:doctimestamp_id
+
 sql2.j2c.updateCellWithConstraint: \
 UPDATE doc SET reference2=:reference2 WHERE doc_id=:doc_id
 
