save timestamp in j2c table

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -47,7 +47,7 @@ UPDATE string SET value=:value WHERE string_id=:data_id
 sql2.integer.updateCellById: \
 UPDATE integer SET value=:value WHERE integer_id=:data_id
 sql2.timestamp.updateCellById: \
-UPDATE integer SET value=:value WHERE integer_id=:data_id
+UPDATE timestamp SET value=:value WHERE timestamp_id=:data_id
 
 sql2.table.select: \
 ${sql2.join_columns.select}; \
