nakaz 74 table order desc

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -53,6 +53,9 @@ sql2.table.select: \
 ${sql2.join_columns.select}; \
 ${sql2.table1.select};
 
+sql2.j2c_table.selectByIdDesc: \
+${sql2.table2.select} ORDER BY row_id desc
+
 sql2.table2.select: \
 ${sql2.join_columns.select}; \
 SELECT * FROM (${sql2.table1.select}) x, doctimestamp \
