icpc2-table RC3

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,3 +1,10 @@
+sql2.f74_day_count.select: \
+SELECT year_day, count(year_day) cnt, created FROM (\n\
+SELECT day_of_year(created) year_day, x.* FROM (\n\
+SELECT * FROM doc,doctimestamp where doc_id=doctimestamp_id and parent_id=9774   AND NOT removed and doctype=9\n\
+) x where year(created)=2018\n\
+) x group by year_day order by year_day
+
 sql2.j2c.updateCreatedDate: \
 UPDATE doctimestamp SET created=:created WHERE doctimestamp_id=:doctimestamp_id
 
