--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,5 +1,5 @@
 sql2.f74_day_count.select: \
-SELECT year_day, count(year_day) cnt, created FROM (\n\
+SELECT PARSEDATETIME(year_day||' '||2018, 'D yyyy') createdDay,  year_day, count(year_day) cnt FROM (\n\
 SELECT day_of_year(created) year_day, x.* FROM (\n\
 SELECT * FROM doc,doctimestamp where doc_id=doctimestamp_id and parent_id=9774   AND NOT removed and doctype=9\n\
 ) x where year(created)=2018\n\
