--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -56,6 +56,11 @@ UPDATE integer SET value=:value WHERE integer_id=:data_id
 sql2.timestamp.updateCellById: \
 UPDATE timestamp SET value=:value WHERE timestamp_id=:data_id
 
+sql2.table.select_seekPatient: \
+${sql2.join_columns.select}; \
+SELECT * FROM (${sql2.table1.select}) x \
+WHERE LOWER(col_9766) LIKE LOWER(:seekPatient) LIMIT 10;
+
 sql2.table.select: \
 ${sql2.join_columns.select}; \
 ${sql2.table1.select};
@@ -106,7 +111,7 @@ ${sql2.icd10.select1} LIMIT 20
 
 sql2.icd10.select1: \
 SELECT d.doc_id, i.* FROM icd i, doc d, icd10uatree t \
-where i.icd_id=icd10uatree_id and t.doc_id=d.doc_id and  doctype=:doctype
+WHERE i.icd_id=icd10uatree_id AND t.doc_id=d.doc_id AND doctype = :doctype
 
 sql2.icpc2.select: \
 SELECT * FROM ( \
