add seek in phone number

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -59,7 +59,9 @@ UPDATE timestamp SET value=:value WHERE timestamp_id=:data_id
 sql2.table.select_seekPatient: \
 ${sql2.join_columns.select}; \
 SELECT * FROM (${sql2.table1.select}) x \
-WHERE LOWER(col_9766) LIKE LOWER(:seekPatient) LIMIT 10;
+WHERE LOWER(col_9766) LIKE LOWER(:seekPatient) \
+OR LOWER(col_9767) LIKE LOWER(:seekPatient) \
+LIMIT 10;
 
 sql2.table.select: \
 ${sql2.join_columns.select}; \
