--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,9 +1,31 @@
+sql2.f74_day_report.select: \
+SELECT * FROM (\n\
+${sql2.f74_day_count.select}\n\
+) row\n\
+LEFT JOIN (\n\
+${sql2.f74_day_row_col_town_village__village.select}\n\
+) town_village ON row.year_day=year_day_10900
+
 sql2.f74_day_count.select: \
 SELECT PARSEDATETIME(year_day||' '||2018, 'D yyyy') createdDay,  year_day, count(year_day) cnt FROM (\n\
+${sql2.f74_day_rows.select}\n\
+) x GROUP BY year_day ORDER BY year_day
+
+sql2.f74_day_row_col_town_village__village.select: \
+SELECT year_day year_day_10900, count(year_day) village_10900 FROM (\n\
+${sql2.f74_day_row_col_integer.select}\n\
+) x WHERE value=2 GROUP BY year_day
+
+sql2.f74_day_row_col_integer.select: \
+SELECT i.*,row.* FROM integer i,doc  cell,(\n\
+${sql2.f74_day_rows.select}\n\
+) row WHERE integer_id=cell.doc_id AND row_id=cell.parent_id AND cell.reference=10900
+
+sql2.f74_day_rows.select: \
 SELECT day_of_year(created) year_day, x.* FROM (\n\
-SELECT * FROM doc,doctimestamp where doc_id=doctimestamp_id and parent_id=9774   AND NOT removed and doctype=9\n\
-) x where year(created)=2018\n\
-) x group by year_day order by year_day
+SELECT doc_id row_id, ds.* FROM doc row, doctimestamp ds \
+WHERE row.doc_id=doctimestamp_id AND row.parent_id=9774 AND NOT row.removed AND row.doctype=9\n\
+) x WHERE YEAR(created)=2018
 
 sql2.j2c.updateCreatedDate: \
 UPDATE doctimestamp SET created=:created WHERE doctimestamp_id=:doctimestamp_id
