консультація вдома в селі - звіт

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -3,13 +3,45 @@ SELECT * FROM (\n\
 ${sql2.f74_day_count.select}\n\
 ) row\n\
 LEFT JOIN (\n\
+${sql2.f74_day_row_col_villageConsultare__home.select}\n\
+) town_village ON row.year_day=year_day_col10\n\
+LEFT JOIN (\n\
 ${sql2.f74_day_row_col_town_village__village.select}\n\
-) town_village ON row.year_day=year_day_10900
+) town_village ON row.year_day=year_day_10900\n\
+LEFT JOIN (\n\
+${sql2.f74_day_row_col_consultare__home.select}\n\
+) home ON row.year_day=year_day_9776
 
 sql2.f74_day_count.select: \
 SELECT PARSEDATETIME(year_day||' '||2018, 'D yyyy') createdDay,  year_day, count(year_day) cnt FROM (\n\
 ${sql2.f74_day_rows.select}\n\
 ) x GROUP BY year_day ORDER BY year_day
+
+sql2.f74_day_rows.select: \
+SELECT day_of_year(created) year_day, x.* FROM (\n\
+SELECT doc_id row_id, ds.* FROM doc row, doctimestamp ds \
+WHERE row.doc_id=doctimestamp_id AND row.parent_id=9774 AND NOT row.removed AND row.doctype=9\n\
+) x WHERE YEAR(created)=2018
+
+sql2.f74_cell_town_village.select: \
+SELECT i.*, parent_id FROM integer i,doc WHERE integer_id=doc_id  AND reference=10900
+
+sql2.f74_cell_consultare_type.select: \
+SELECT i.*, parent_id FROM integer i,doc WHERE integer_id=doc_id  AND reference=9776
+
+sql2.f74_day_row_col_villageConsultare__home.select: \
+SELECT year_day year_day_col10, count(*) count_col10 FROM (\n\
+SELECT cell.value consultare, cell2.value town_village ,row.year_day FROM\n\
+(${sql2.f74_cell_consultare_type.select})  cell,\n\
+(${sql2.f74_cell_town_village.select})  cell2,\n\
+(${sql2.f74_day_rows.select}\n\
+) row WHERE row_id=cell.parent_id  AND row_id=cell2.parent_id\n\
+) x WHERE consultare=2 AND town_village=2 GROUP BY year_day
+
+sql2.f74_day_row_col_consultare__home.select: \
+SELECT year_day year_day_9776, count(year_day) home_9776 FROM (\n\
+${sql2.f74_day_row_col_consultare_type.select}\n\
+) x WHERE value=2 GROUP BY year_day
 
 sql2.f74_day_row_col_town_village__village.select: \
 SELECT year_day year_day_10900, count(year_day) village_10900 FROM (\n\
@@ -17,15 +49,14 @@ ${sql2.f74_day_row_col_integer.select}\n\
 ) x WHERE value=2 GROUP BY year_day
 
 sql2.f74_day_row_col_integer.select: \
-SELECT i.*,row.* FROM integer i,doc  cell,(\n\
+SELECT cell.*,row.* FROM (${sql2.f74_cell_town_village.select})  cell,(\n\
 ${sql2.f74_day_rows.select}\n\
-) row WHERE integer_id=cell.doc_id AND row_id=cell.parent_id AND cell.reference=10900
+) row WHERE row_id=cell.parent_id 
 
-sql2.f74_day_rows.select: \
-SELECT day_of_year(created) year_day, x.* FROM (\n\
-SELECT doc_id row_id, ds.* FROM doc row, doctimestamp ds \
-WHERE row.doc_id=doctimestamp_id AND row.parent_id=9774 AND NOT row.removed AND row.doctype=9\n\
-) x WHERE YEAR(created)=2018
+sql2.f74_day_row_col_consultare_type.select: \
+SELECT cell.*,row.* FROM (${sql2.f74_cell_consultare_type.select})  cell,(\n\
+${sql2.f74_day_rows.select}\n\
+) row WHERE row_id=cell.parent_id 
 
 sql2.j2c.updateCreatedDate: \
 UPDATE doctimestamp SET created=:created WHERE doctimestamp_id=:doctimestamp_id
