phisician liste for form 74

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,3 +1,21 @@
+
+sql.msp_employee.list: \
+SELECT p.*, username FROM person p, users u, doc dEmployee, doc dMsp \
+WHERE dEmployee.doctype = 13 \
+AND person_id=dEmployee.doc_id AND person_id=u.user_id \
+AND dMsp.parent_id=dEmployee.doc_id AND dMsp.reference=:msp_id
+
+sql.medical.selectEmployeerByMsp: \
+SELECT e.* FROM (SELECT username, p.* FROM users u, person p where person_id=user_id) e  \
+LEFT JOIN doc ON parent_id=person_id  \
+WHERE reference =:msp_id \
+ORDER BY person_id DESC
+
+sql.medical.selectDoctorByMsp: \
+SELECT d.* FROM ( ${sql.medical.selectEmployeerByMsp}) d, user_roles ur \
+WHERE ur.username=d.username AND role='ROLE_USER' \
+ORDER BY person_id DESC
+
 sql.program_folder.select: \
 SELECT * FROM doc dFolder, string dirName WHERE doc_id=string_id AND doctype=10
 
