first read forma74 data for msp not stabil

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,6 +1,8 @@
 sql2.f74_day_report.select: \
 SELECT * FROM (\n\
-${sql2.f74_day_count.select}\n\
+SELECT PARSEDATETIME(year_day||' '||2018, 'D yyyy') createdDay,  year_day, count(year_day) cnt FROM (\n\
+${sql2.f74_day_rows.select}\n\
+) x GROUP BY year_day ORDER BY year_day\n\
 ) row\n\
 LEFT JOIN (\n\
 ${sql2.f74_day_row_col_villageConsultare__home.select}\n\
@@ -12,14 +14,16 @@ LEFT JOIN (\n\
 ${sql2.f74_day_row_col_consultare__home.select}\n\
 ) home ON row.year_day=year_day_9776
 
-sql2.f74_day_count.select: \
-SELECT PARSEDATETIME(year_day||' '||2018, 'D yyyy') createdDay,  year_day, count(year_day) cnt FROM (\n\
-${sql2.f74_day_rows.select}\n\
-) x GROUP BY year_day ORDER BY year_day
-
 sql2.f74_day_rows.select: \
+${sql2.f74_day_rows_all.select}\n\
+${sql2.f74_day_rows.addSelectOfMsp}
+
+sql2.f74_day_rows.addSelectOfMsp: \
+AND reference2 in (SELECT distinct parent_id FROM doc, person where parent_id=person_id  and reference=:msp_id)
+
+sql2.f74_day_rows_all.select: \
 SELECT day_of_year(created) year_day, x.* FROM (\n\
-SELECT doc_id row_id, ds.* FROM doc row, doctimestamp ds \
+SELECT doc_id row_id, ds.*, reference2 FROM doc row, doctimestamp ds \n\
 WHERE row.doc_id=doctimestamp_id AND row.parent_id=9774 AND NOT row.removed AND row.doctype=9\n\
 ) x WHERE YEAR(created)=2018
 
@@ -121,13 +125,18 @@ ${sql2.join_columns.select}; \
 ${sql2.table1.select};
 
 sql2.j2c_table.selectByIdDesc: \
-${sql2.table2.select} ORDER BY row_id desc
+${sql2.table2.select} \n\
+${sql2.f74_day_rows.addSelectOfMsp}\n\
+ORDER BY row_id DESC
+
+sql2.j2c_table1.selectByIdDesc: \
+${sql2.table2.select} ORDER BY row_id DESC
 
 sql2.table2.select: \
 ${sql2.join_columns.select}; \
 SELECT * FROM (${sql2.table1.select}) x, doctimestamp \
-, (SELECT doc_id r2r_id,p.* FROM doc,person p WHERE person_id=reference2) p \
-WHERE row_id=doctimestamp_id  and p.r2r_id=row_id
+, (SELECT doc_id r2r_id, reference2, p.* FROM doc,person p WHERE person_id=reference2) p \
+WHERE row_id=doctimestamp_id AND p.r2r_id=row_id
 
 sql2.table1.select: \
 SELECT rws.parent_id tbl_id, rws.doc_id row_id\n\
