registry employeer with email

--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,3 +1,28 @@
+
+sql2.users.insert: \
+INSERT INTO \n\
+doc (doc_id, doctype) \n\
+VALUES (:nextDbId1, :doctype);\n\
+INSERT INTO \n\
+person (person_id, family_name, first_name, second_name, birth_date, email)\n\
+VALUES (:nextDbId1, :family_name, :first_name, :second_name, :birth_date, :email);\n\
+INSERT INTO \n\
+users (user_id, username, password, enabled)\n\
+VALUES (:nextDbId1, :username, :password, false);\n\
+INSERT INTO \n\
+user_roles (username, role)\n\
+VALUES(:username, :role);\n\
+INSERT INTO \n\
+uuid (uuid_dbid, uuid_uuid)\n\
+VALUES(:nextDbId1, :uuid);
+
+sql2.users.activateLogin: \
+UPDATE users SET enabled=true \n\
+WHERE user_id IN (SELECT uuid_dbid FROM uuid WHERE uuid_uuid=:uuid)
+
+sql2.users.selectUserName: \
+SELECT username FROM users WHERE username=:username
+
 sql2.f74_day_report.select: \
 SELECT * FROM (\n\
 SELECT PARSEDATETIME(year_day||' '||2018, 'D yyyy') createdDay,  year_day, count(year_day) cnt FROM (\n\
