--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	compile 'org.springframework:spring-jdbc'
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	compile 'org.springframework.boot:spring-boot-starter-mail'
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('com.h2database:h2')
 	compile 'org.webjars:font-awesome:5.0.6'
@@ -44,4 +45,6 @@ dependencies {
 	compile 'org.webjars:jspdf:1.3.5'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
+	
+	
 }
