--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -100,6 +100,8 @@ VALUES (10, :nextDbId1, :parent_id, :reference, :reference2); \
 sql2.j2c.insertRow2: \
 INSERT INTO doc (doctype, doc_id, parent_id, reference2) VALUES (9, :nextDbId1, :tbl_id, :reference2); \
 INSERT INTO doctimestamp (doctimestamp_id) VALUES (:nextDbId1); \
+SELECT dts.*, p.* FROM doc d, doctimestamp dts, person p \
+WHERE person_id=reference2 AND doctimestamp_id=doc_id AND doc_id=:nextDbId1
 
 sql2.j2c.insertRow: \
 INSERT INTO doc (doctype, doc_id, parent_id) \
