--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ dependencies {
 	runtime('com.h2database:h2')
 	compile 'org.webjars:font-awesome:5.0.6'
 	compile 'org.webjars:font-awesome:4.7.0'
-	compile 'org.webjars:angularjs:1.7.0'
+	compile 'org.webjars:angularjs:1.7.2'
+	 //compile 'org.webjars:angularjs:1.7.0'
 	 //compile 'org.webjars:angularjs:1.6.10'
 	compile 'org.webjars.npm:angular2:2.0.0-beta.21'
 	compile 'org.xerial:sqlite-jdbc'
