--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,8 @@ config.dataSourceDb1.url: \
 jdbc:h2:tcp://localhost:9092/h2-am-1c_1/h2-am-1c_1;DATABASE_TO_UPPER=false
 
 config.dataSourceDb2.url: \
-jdbc:h2:tcp://localhost/h2-am-mvp1-medic-2/h2-am-mvp1-medic-2;DATABASE_TO_UPPER=false
+jdbc:h2:tcp://localhost\
+/h2-am-mvp1-medic-2/h2-am-mvp1-medic-2;DATABASE_TO_UPPER=false
 #jdbc:h2:tcp://localhost/h2-am-mvp1-medic-1/h2-am-mvp1-medic-1;DATABASE_TO_UPPER=false
 
 config.staticResources: \
