--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -277,6 +277,9 @@ sql.msp_divisions.select: \
 SELECT * FROM doc, docbody \
 WHERE doc_id=docbody_id AND doctype=16 AND parent_id=:msp_id
 
+sql.db1.users.fromUserId: \
+SELECT * FROM users LEFT JOIN person ON person_id=user_id WHERE user_id=:user_id
+
 sql.db1.users.fromUsername: \
 SELECT * FROM users LEFT JOIN person ON person_id=user_id WHERE username=:username
 
