--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port = 8040
 #server.address = 127.0.0.1
 
 config.serverLocation: \
-/home/roman/algoritmed/code-4.8/am_j2c_2.1
+/home/roman/algoritmed/git-1/am_j2c_2.1
+#/home/roman/algoritmed/code-4.8/am_j2c_2.1
 #/home/roman/algoritmed/code/am_j2c_2.1
 #/home/roman/algoritmed/code/am_j2c_2
 #C:/opt/am_j2c_2.1
