--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -4,6 +4,9 @@ INSERT INTO \n\
 doc (doc_id, doctype) \n\
 VALUES (:nextDbId1, :doctype);\n\
 INSERT INTO \n\
+docbody (docbody_id, docbody) \n\
+VALUES (:nextDbId1, '{}');\n\
+INSERT INTO \n\
 person (person_id, family_name, first_name, second_name, birth_date, email)\n\
 VALUES (:nextDbId1, :family_name, :first_name, :second_name, :birth_date, :email);\n\
 INSERT INTO \n\
