--- a/src/main/resources/sql2.properties
+++ b/src/main/resources/sql2.properties
@@ -1,5 +1,10 @@
 
-sql2.user_msp.insert: \
+sql2.add_user_with_msp: \
+${sql2.users.insert}\n\
+${sql2.add_msp_to_user}
+
+sql2.add_msp_to_user: \
+INSERT INTO doc (parent_id, doctype, reference) VALUES (:nextDbId1, 23, :msp_id);
 
 sql2.users.insert: \
 INSERT INTO \n\
@@ -13,7 +18,7 @@ person (person_id, family_name, first_name, second_name, birth_date, email)\n\
 VALUES (:nextDbId1, :family_name, :first_name, :second_name, :birth_date, :email);\n\
 INSERT INTO \n\
 users (user_id, username, password, enabled)\n\
-VALUES (:nextDbId1, :username, :password, false);\n\
+VALUES (:nextDbId1, :username, :password, :enable);\n\
 INSERT INTO \n\
 user_roles (username, role)\n\
 VALUES(:username, :role);\n\
