--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ dependencies {
 	compile 'org.webjars:font-awesome:5.0.6'
 	compile 'org.webjars:font-awesome:4.7.0'
 
-	compile 'org.webjars:angularjs:1.7.4'
+	compile 'org.webjars:angularjs:1.7.5'
+	//compile 'org.webjars:angularjs:1.7.4'
 	//compile 'org.webjars:angularjs:1.7.2'
 	 //compile 'org.webjars:angularjs:1.7.0'
 	 //compile 'org.webjars:angularjs:1.6.10'
