--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,8 @@ ${config.serverLocation}${config.staticResources}\
 #/f/config/serverWebSites.json
 
 config.dataSourceDb1.url: \
-jdbc:h2:tcp://localhost:9092/h2-am-1c_1/h2-am-1c_1;MVCC=true;DATABASE_TO_UPPER=false
+jdbc:h2:tcp://localhost:9092/h2-am-1c_nephro_1/h2-am-1c_nephro_1;MVCC=true;DATABASE_TO_UPPER=false
+#jdbc:h2:tcp://localhost:9092/h2-am-1c_1/h2-am-1c_1;MVCC=true;DATABASE_TO_UPPER=false
 
 config.dataSourceDb2.url: \
 jdbc:h2:tcp://localhost\
