--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port = 8040
 #server.address = 127.0.0.1
 
+config.extraFile.n2: \
+/home/roman/algoritmed/git-1/am-nephro001/WebContent/
+
+config.extraFile.sp1: \
+/home/roman/algoritmed/git-1/test-extra-project/
+
 config.serverLocation: \
 /home/roman/algoritmed/git-1/am_j2c_2.1
 #/home/roman/algoritmed/code-4.8/am_j2c_2.1
