--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
 	ext {
-		springBootVersion = '2.1.0.RELEASE'
+		springBootVersion = '2.1.1.RELEASE'
+		//springBootVersion = '2.1.0.RELEASE'
 	}
 	repositories {
 		mavenCentral()
