--- a/build.gradle
+++ b/build.gradle
@@ -40,13 +40,9 @@ dependencies {
 	compile 'org.webjars:font-awesome:5.0.6'
 	compile 'org.webjars:font-awesome:4.7.0'
 
-	compile 'org.webjars:angularjs:1.7.5'
-	//compile 'org.webjars:angularjs:1.7.4'
-	//compile 'org.webjars:angularjs:1.7.2'
-	 //compile 'org.webjars:angularjs:1.7.0'
-	 //compile 'org.webjars:angularjs:1.6.10'
-	compile 'org.webjars.npm:angular2:2.0.0-beta.21'
-	compile 'org.xerial:sqlite-jdbc'
+	compile 'org.webjars:angularjs:1.7.6'
+//	compile 'org.webjars.npm:angular2:2.0.0-beta.21'
+//	compile 'org.xerial:sqlite-jdbc'
 	//compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
 	
 	compile 'org.webjars:jspdf:1.3.5'
